# RentOnline

./: .gitmodules  Moderator.project  main.cpp  mainframe.cpp  mainframe.h  person.cpp  person.h
app/src/androidTest/java/com/fonekey/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/fonekey/: MapsFragment.java
app/src/main/res/layout/: activity_main.xml  ferm.xml  fragment_maps.xml  fragment_rent.xml  fragment_surrender.xml  layout_add_ferm.xml  layout_search.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/fonekey/: ExampleUnitTest.java
desktop-cxx-wx-moderator/: CMakeLists.txt  Moderator.project
desktop-cxx-wx-moderator/src/: main.cpp  mainframe.cpp  person.cpp  person.h
emulator-lock-cxx/: CMakeLists.txt  emuDoor.project  main.cpp
hub-esp32-beacon/esp32-beacon/: esp32-beacon.ino
lib-cxx-exchange/: CMakeLists.txt  ExchangeLib.project  README.md
lib-cxx-exchange/config/: install.cmake  template-base-config.cmake.in  template-config.cmake.in
lib-cxx-exchange/include/: assembly.h  baseserver.h  consts.hpp  fileLinux.hpp  knuckle.h  linkLinux.hpp  list_id.h  listlink.h  reform.h
lib-cxx-exchange/src/: assembly.cpp  baseserver.cpp  fileLinux.cpp  knuckle.cpp  linkLinux.cpp  listlink.cpp  reform.cpp
lib-cxx-exchange/test/: knuckle.cpp
mobile-android-java-rent/: settings.gradle
mobile-android-java-rent/app/: build.gradle
mobile-android-java-rent/app/src/main/: AndroidManifest.xml
mobile-android-java-rent/app/src/main/cpp/: CMakeLists.txt  knuckle.cpp  knuckle.h  list_id.h  native-lib.cpp
mobile-android-java-rent/app/src/main/res/drawable/: round_corners.xml
mobile-android-java-rent/app/src/main/res/layout/: account_fragment.xml  account_login_activity.xml  account_login_create_activity.xml  account_login_sign_activity.xml  activity_main.xml  activity_viewferm.xml  ferm.xml  ferm_slider.xml  fragment_list.xml  fragment_maps.xml  fragment_rent.xml  fragment_search.xml  fragment_surrender.xml  fragment_usercard.xml  layout_add_ferm.xml  layout_calendar.xml  layout_date.xml  layout_numberperson.xml  layout_town.xml  plug_fragment.xml
mobile-android-java-rent/app/src/main/res/menu/: menu_navigation.xml
mobile-android-java-rent/app/src/main/res/navigation/: mobile_navigation.xml
mobile-android-java-rent/app/src/main/res/values/: strings.xml  styles.xml
mobile-android-java-rent/app/src/main/res/xml/: apduservice.xml
mobile-android-java-rent/gradle/wrapper/: gradle-wrapper.properties
mobile-android-kotlin-rent/: .gitignore  build.gradle  gradle.properties  settings.gradle
mobile-android-kotlin-rent-clean/: build.gradle  settings.gradle
mobile-android-kotlin-rent-clean/app/: build.gradle
mobile-android-kotlin-rent-clean/app/src/main/: AndroidManifest.xml
mobile-android-kotlin-rent-clean/app/src/main/res/layout/: bluetoothle_activity.xml  clean_list_activity.xml  house_ctrl_activity.xml  house_entry_activity.xml  house_entry_fragment.xml  keys_list_fragment.xml  login_activity.xml  main_map_fragment.xml  navigation_head.xml  navigation_view.xml
mobile-android-kotlin-rent-clean/app/src/main/res/menu/: navigation_menu.xml
mobile-android-kotlin-rent-clean/app/src/main/res/navigation/: navigation_host.xml
mobile-android-kotlin-rent-clean/app/src/main/res/values/: strings.xml
mobile-android-kotlin-rent-clean/app/src/main/res/values-night/: themes.xml
mobile-android-kotlin-rent-clean/gradle/wrapper/: gradle-wrapper.properties
mobile-android-kotlin-rent-kts/: build.gradle.kts  settings.gradle.kts
mobile-android-kotlin-rent-kts/app/: build.gradle.kts
mobile-android-kotlin-rent-kts/app/src/main/: AndroidManifest.xml
mobile-android-kotlin-rent-kts/app/src/main/res/drawable/: continuous_selected_bg_end.xml  selected_booking_rhombus.xml  single_selected_bg.xml  today_bg.xml  today_bg_booking.xml
mobile-android-kotlin-rent-kts/app/src/main/res/layout/: calendar_activity.xml  house_ctrl_activity.xml  keys_list_fragment.xml  keys_list_item.xml  main_map_select_house_bottom_sheet.xml
mobile-android-kotlin-rent-kts/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
mobile-android-kotlin-rent-kts/gradle/wrapper/: gradle-wrapper.properties
mobile-android-kotlin-rent-master/: settings.gradle
mobile-android-kotlin-rent-master/app/: build.gradle
mobile-android-kotlin-rent-master/app/src/main/: AndroidManifest.xml
mobile-android-kotlin-rent-master/app/src/main/res/layout/: main_activity.xml
mobile-android-kotlin-rent-master/app/src/main/res/values/: strings.xml  themes.xml
mobile-android-kotlin-rent-master/gradle/wrapper/: gradle-wrapper.properties
mobile-android-kotlin-rent/app/: build.gradle
mobile-android-kotlin-rent/app/src/main/: AndroidManifest.xml
mobile-android-kotlin-rent/app/src/main/res/drawable/: continuous_selected_bg_middle.xml  continuous_selected_bg_start.xml  selected_booking_circle.xml
mobile-android-kotlin-rent/app/src/main/res/layout/: calendar_activity.xml  calendar_day.xml  calendar_header.xml  house_ctrl_activity.xml  house_entry_activity.xml  main_map_fragment.xml
mobile-android-kotlin-rent/app/src/main/res/menu/: navigation_menu.xml
mobile-android-kotlin-rent/gradle/wrapper/: gradle-wrapper.properties
server-cxx-unix/: CMakeLists.txt  server-cxx-unix.project
server-cxx-unix/src/: alock.cpp  main.cpp
server-cxx-unix/src/core/: basecommand.cpp  basecommand.h  door.cpp  door.h  moderator.cpp  moderator.h  user.cpp  user.h
server-cxx-unix/test/: commands.cpp  server_send_picture.cpp
server-cxx-win/: CMakeLists.txt  server-cxx-win.project
server-cxx-win/src/: core.cpp  core.h  crypto.cpp  crypto.h  main.cpp  query.cpp  query.h  tcpserverssl.cpp  tcpserverssl.h
src/: mainframe.h
web-rent/css/: calendar.css  house.css  login.css  main.css  sample.css  user.css  yapay.css
web-rent/script/: calendar.js  house.js  login.js  main.js  sample.js  signup.js  user.js  yapay.js
web-rent/web/: calendar.html  house.html  login.html  main.html  signup.html  user.html  yapay.html
(+119 files in other folders)
